# markbook-classic

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  playwright.config.cjs
rust/markbookd/: Cargo.toml  package.json
rust/markbookd/src/: backup.rs  calc.rs  db.rs  ipc.rs  legacy.rs  main.rs
rust/markbookd/tests/: analytics_assessment_drilldown.rs  analytics_class_open.rs  analytics_class_rows.rs  analytics_combined_open.rs  analytics_combined_reports_alignment.rs  analytics_combined_weight_fallback.rs  analytics_drilldown_reports_alignment.rs  analytics_reports_alignment.rs  analytics_student_compare.rs  analytics_student_open.rs  analytics_student_trend.rs  assessment_stats_parity.rs  assessment_stats_vs_fresh_legacy_summaries.rs  assessments_hide_deleted_like.rs  backup_zip.rs  bonus_category_invariant.rs  calc_behavior_locks.rs  calc_blend_modecats_type_filter_quirk.rs  calc_config_override.rs  calc_median_weighted_jump.rs  calc_methods_vb6_parity.rs  calc_mode_boundary_roff.rs  calc_parity_goldens.rs  category_weight_exclusion_invariant.rs  class_wizard_meta.rs  classes_import_link_roundtrip.rs  classes_update_collision_policy.rs  classes_update_from_attached_legacy.rs  classes_update_from_legacy_upsert.rs  classes_update_preserve_validity.rs  comments_fit_constraints.rs  comments_flood_fill.rs  comments_remark_upsert_one.rs  comments_transfer_apply_policies.rs  comments_transfer_preview.rs  course_description_models.rs  course_description_options.rs  db_class_meta_import_link_migration.rs  db_migration_snapshots.rs  entries_clone_roundtrip.rs  (+35 more)
(+266 files in other folders)
